<resources>
    <string name="app_name">Luga Luga</string>
    <string name="hint_email">E-mail</string>
    <string name="esqueci">Esqueci a senha</string>
    <string name="senha">Senha</string>
    <string name="produto_nome">Televisão</string>
    <string name="produto_descr">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="produto_preco">R$ 5.000,00</string>
    <string name="nome_aleatorio">Nome Produto</string>
    <string name="qtd_aleatorio">Quantidade</string>
    <string name="preco_aleatorio">Preço</string>
    <string name="alugar">Alugar</string>
    <string name="descr_aleatorio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </string>

    <string name="input_nome_user">Nome</string>
    <string name="input_cpf_user">CPF</string>
    <string name="input_nascimento_user">Data Nascimento</string>
    <string name="input_logradouro_user">Logradouro</string>
    <string name="input_numero_user">Nº</string>
    <string name="input_complemento_user">Complemento</string>
    <string name="input_bairro_user">Bairro</string>
    <string name="input_cep_user">CEP</string>
    <string name="input_cidade_user">Cidade</string>
    <string name="input_uf_user">UF</string>
    <string name="input_email_user">E-mail</string>
    <string name="input_senha_user">Senha</string>

    <string name="btn_cadastrar">Cadastrar</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>